--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 body,
 html {
   font-family: 'Tilt Neon', sans-serif;
-  background-image: url();
+  background-image: url("./assets/backgroundPortfolio.png");
+  /* background-color: rgb(141, 141, 141); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -38,13 +39,15 @@ background-color: white;
   color: black;
 }
 #nav-text{
-  padding-left: 10px;
+  padding-left: 25px;
   text-decoration: none;
   color: white;
+  font-size: 15px;
 }
 #href-nav{
   text-decoration: none;
   color: white;
+  /* font-size: 18px */
 }
 #nav{
   background-color: var(--lightgrn);
@@ -53,4 +56,80 @@ background-color: white;
 #none{
   width: 100%;
   height: 100%;
+}
+
+.pageTitle {
+  border-bottom: 3px solid;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  width: 40%;
+  color: white;
+}
+.aboutContainer {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+#aboutImg {
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 50px;
+  margin: 20px;
+  margin-right: 70px;;
+}
+#portImg {
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 25px;
+  margin: 20px;
+  margin-right: 70px;
+  width: 300px;
+  height: 150px;
+  object-fit: cover;
+}
+#aboutText {
+  color: white;
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  text-align: left;
+  line-height: 1.7;
+}
+.githubTitle {
+  color: white;
+  width: 200px;
+  margin-right: 20px;
+  border-right: white solid 2px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+}
+#portText {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  text-align: left;
+  line-height: 1.7;
+  border-left: white;
+}
+.portLinkContainer {
+  line-height: 1.7;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.portLink {
+  text-decoration: none;
+  color: white;
+  margin: 5px;
+  margin-left: 20px;
+  border: white solid 2px;
+  border-radius: 5px;
+  padding: 5px;
+  width: 105px;
 }
