--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,41 @@ background-color: white;
   padding: 5px;
   width: 105px;
 }
+.resContainer{
+  display: flex;
+  justify-content: space-around;
+  align-items: top;
+  margin: 20px;
+  margin-top: 30px;
+  color: white;
+}
+
+.frontEnd{
+  border: white solid 2px;
+  width: 32%;
+  line-height: 1.4;
+}
+.backEnd{
+  border: white solid 2px;
+  width: 32%;
+  line-height: 1.4;
+}
+.performence{
+  border: white solid 2px;
+  width: 32%;
+  line-height: 1.4;
+}
+
+.downloadResContainer{
+  color: white;
+}
+
+.resImg{
+  width: 50px;
+  height: 50px;
+  margin-bottom: 20px;
+}
+
+.profTitle{
+  color: white;
+}
