--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
   --lightgray: rgb(83, 83, 83);
   text-align: center;
+  color: white;
+  line-height: 1.7;
 }
 
 body,
@@ -60,6 +62,7 @@ html {
 .aboutContainer {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
 }
 #aboutImg {
@@ -166,4 +169,94 @@ html {
   height: 50px;
   width: 50px;
   margin: 20px;
+}
+
+
+
+.reachOutTitle{
+  color: white;
+  display: flex;
+  justify-content: left;
+  margin-left: 20px;
+}
+
+.reachOutText{
+  color: white;
+  display: flex;
+  justify-content: left;
+  text-align: left;
+  margin-left: 20px;
+  line-height: 1.7;
+}
+
+/* .formContainer{
+  color: white;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+} */
+
+.formField{
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.formContainer{
+  display: flex;
+  justify-content: space-around;
+  align-items: top;
+  margin: 20px;
+  margin-top: 30px;
+  color: white;
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+
+}
+
+.inputBox{
+  margin: 10px;
+  border-radius: 5px;
+  width: 50%;
+  height: 25px;
+  border: black solid 2px;
+}
+
+.inputMessage{
+  margin: 10px;
+  border-radius: 5px;
+  width: 50%;
+  height: 50px;
+  border: black solid 2px;
+  font-family: 'Tilt Neon', sans-serif;
+}
+
+.inputButton{
+  margin: 10px;
+  border-radius: 5px;
+  border: black solid 2px;
+  padding: 5px;
+}
+
+.errorText{
+  color: white;
+}
+
+#infotext{
+  color: white;
+}
+
+.infoLink{
+  color: white;
 }
