--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ html {
   /* font-size: 18px */
 }
 #nav{
-  background-color: var(--lightgray);
+  background-color: #248a86;
   padding-bottom: 20px
 }
 #none{
